Update:New Files

--- a/css/post-1244.css
+++ b/css/post-1244.css
@@ -3,7 +3,7 @@
 	font-style: normal;
 	font-weight: normal;
 	font-display: auto;
-	src: url('../fonts/catchy-mager.ttf') format('truetype');
+	src: url('https://sm-e5124c.ingress-alpha.ewp.live/wp-content/uploads/2024/12/catchy-mager.ttf') format('truetype');
 }
 /* End Custom Fonts CSS */
 /* Start Custom Fonts CSS */@font-face {
@@ -11,6 +11,6 @@
 	font-style: normal;
 	font-weight: normal;
 	font-display: auto;
-	src: url('../fonts/CocoGothic_trial.ttf') format('truetype');
+	src: url('https://sm-e5124c.ingress-alpha.ewp.live/wp-content/uploads/2024/12/CocoGothic_trial.ttf') format('truetype');
 }
 /* End Custom Fonts CSS */
